# 03_macros

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
docs/: class-3.excalidraw
examples/: auto_debug.rs  auto_deref.rs  enum_macro.rs  enum_macro_darling.rs  my_ready.rs  my_try.rs  my_vec.rs
src/: auto_debug.rs  auto_deref.rs  enum_from.rs  enum_from_darling.rs  lib.rs
